--- a/css/style.css
+++ b/css/style.css
@@ -29,6 +29,18 @@ h2 {
   max-width: 600px;
 }
 
+#after_response1 {
+  visibility: visible;
+  margin-bottom: 30px;
+  text-align: center;
+}
+
+#after_submit1 {
+  margin-top: -350px;
+  visibility: hidden;
+  max-width: 600px;
+}
+
 .widthQuiz {
   display: block;
   margin: auto;
