--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 body {
   color: rgba(0, 0, 0, 0.92);
-  font-family: 'Oswald', sans-serif; }
-  body h1 {
+  font-family: 'Oswald', sans-serif;
+}
+
+h1 {
     margin-top: 5px;
     margin-bottom: 5px;
     font-family: 'Oswald', sans-serif;
@@ -9,39 +11,61 @@ body {
     text-align: center;
     background-color: #F2F2F3;
     border: 3px solid #ffc708;
-    border-radius: 10px; }
-  body .widthQuiz {
+    border-radius: 10px;
+  }
+
+.widthQuiz {
     width: 600px;
-    margin: 0 auto; }
-    body .widthQuiz .quizBlock {
-      min-height: 30vh; }
-      body .widthQuiz .quizBlock h2 {
+    margin: 0 auto;
+  }
+
+.widthQuiz .quizBlock {
+      min-height: 30vh;
+    }
+
+.widthQuiz .quizBlock h2 {
         font-family: 'Source Serif Pro', sans-serif;
         font-size: 35px;
         font-weight: bold;
-        text-align: center; }
-        body .widthQuiz .quizBlock h2:after {
-          content: "*"; }
-      body .widthQuiz .quizBlock p {
-        text-align: center; }
-        body .widthQuiz .quizBlock p.intro:before {
-          content: "*"; }
-        body .widthQuiz .quizBlock p.question {
-          font-size: 1.5em; }
-      body .widthQuiz .quizBlock .inputWrapper {
-        text-align: center; }
-        body .widthQuiz .quizBlock .inputWrapper input {
+        text-align: center;
+      }
+
+.widthQuiz .quizBlock h2:after {
+          content: "*";
+        }
+
+.widthQuiz .quizBlock p {
+        text-align: center;
+      }
+
+.widthQuiz .quizBlock p.intro:before {
+          content: "*";
+        }
+
+.widthQuiz .quizBlock p.question {
+          font-size: 1.5em;
+        }
+
+.widthQuiz .quizBlock .inputWrapper {
+        text-align: center;
+      }
+
+.widthQuiz .quizBlock .inputWrapper input {
           border: 2px solid rgba(255, 199, 8, 0.5);
           padding: 5px 10px;
           font-size: 2.5em;
           width: 10%;
           outline: none;
           text-align: right;
-          border-radius: 10px; }
-          body .widthQuiz .quizBlock .inputWrapper input:focus {
+          border-radius: 10px;
+        }
+
+.widthQuiz .quizBlock .inputWrapper input:focus {
             outline: none;
-            border: 2px solid #ffc708; }
-        body .widthQuiz .quizBlock .inputWrapper .btn {
+            border: 2px solid #ffc708;
+          }
+
+.widthQuiz .quizBlock .inputWrapper .btn {
           margin-top: 10px;
           font-family: 'Oswald', sans-serif;
           color: white;
@@ -51,7 +75,20 @@ body {
           text-align: center;
           display: inline-block;
           background-color: #BDBDBD;
-          border: none; }
-          body .widthQuiz .quizBlock .inputWrapper .btn:hover {
+          border: none;
+        }
+
+.widthQuiz .quizBlock .inputWrapper .btn:hover {
             border: none;
-            background-color: #ffc708; }
+            background-color: #ffc708;
+          }
+
+.quizBlock {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+
+.asterix {
+  font-family: 'Source Serif Pro';
+  font-size: 40px;
+}
