--- a/css/style.css
+++ b/css/style.css
@@ -52,9 +52,9 @@ h1 {
 
 .widthQuiz .quizBlock .inputWrapper input {
           border: 2px solid rgba(255, 199, 8, 0.5);
-          padding: 5px 10px;
-          font-size: 2.5em;
-          width: 10%;
+          padding: 15px 30px;
+          font-size: 1.4em;
+          width: 20%;
           outline: none;
           text-align: right;
           border-radius: 10px;
@@ -91,4 +91,8 @@ h1 {
 .asterix {
   font-family: 'Source Serif Pro';
   font-size: 40px;
+}
+
+.currency {
+  font-size: 30px;
 }
